# audio-scope-view

./: .gitignore  api-keys.html  dashboard.html  dialog-create-scope.html  dialog-delete-api-key.html  dialog-edit-api-key.html  dialog-scope-settings.html  dialog-show-created-key.html  dialog-test-microphone.html  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  scope-detail.html  scopes.html  settings.html  turbo.json  vercel.json
rust/: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  SPEC.md  config.toml  rust-toolchain.toml
rust-server/: Cargo.toml  README.md
rust-server/src/: dsp.rs  main.rs
rust/.cargo/: config.toml
rust/.github/workflows/: ci.yml
rust/migrations/: 001_create_scopes.sql  002_create_settings.sql  003_create_waveforms.sql
rust/scope-dsp/: Cargo.toml
rust/scope-dsp/src/: lib.rs
rust/src/: lib.rs  main.rs
rust/src/api/: context_extractor.rs  dto_graphql_in.rs  dto_graphql_out.rs  middleware_cors.rs  mod.rs  resolver_dashboard.rs  resolver_scope.rs  resolver_settings.rs  schema_audio_input.rs  schema_dashboard.rs  schema_dsp.rs  schema_export.rs  schema_root.rs  schema_scope.rs  schema_settings.rs  schema_subscription.rs  schema_waveform.rs  server_graphql.rs
rust/src/api/auth/: mod.rs  (+2 more)
rust/src/application/: batch_capture.rs  export_service.rs  mapper_scope.rs  mod.rs  service_dashboard.rs  service_scope.rs  service_settings.rs  service_waveform.rs  simulation_service.rs
rust/src/domain/: entity_capture.rs  entity_dashboard_summary.rs  entity_scope.rs  entity_settings.rs  entity_waveform.rs  error_domain.rs  fft_processor.rs  measurements.rs  mod.rs  spectrogram.rs  trait_audio_capture.rs  trait_scope_repository.rs  trait_settings_repository.rs  trait_waveform_repository.rs  valueobject_amplitude.rs  valueobject_frequency.rs  valueobject_timerange.rs  valueobject_timescale.rs  waveform_generators.rs
rust/src/infrastructure/: audio_capture_alsa.rs  audio_capture_mock.rs  audio_capture_pulse.rs  audio_capture_real.rs  audio_stream_manager.rs  config_loader.rs  database_connection.rs  database_migrations.rs  mod.rs  repo_sqlite_scope.rs  repo_sqlite_settings.rs  repo_sqlite_waveform.rs
rust/src/shared/: config_struct.rs  constants.rs  error_app.rs  mod.rs  result_type.rs
rust/tests/api/: test_scope_operations.rs
rust/tests/domain/: test_scope_entity.rs
rust/tooling/: clippy.toml  pre-commit.sh  remove_verbose_comments  remove_verbose_comments.cpp  rust-analyzer.json  rustfmt.toml  rustup.toml
(+124 files in other folders)
